implement PUT v1/user endpoint
