# repository/interfaces.go
@@ -10,4 +10,5 @@ type RepositoryInterface interface {
 	InsertUser(ctx context.Context, user User) (userID int64, err error)
 	GetUsers(ctx context.Context, request UserFilter) (users []User, err error)
 	IncrementSuccessfulLoginCount(ctx context.Context, userID int64) error
+	UpdateUser(ctx context.Context, user User) (int64, error)
 }
